Changelog
=========

1.0dev (Unreleased)
-------------------

- Fix regex for 5min endpoint.
- Handle more error: HTTPError, OEmbedError
- Add support for instagr.am, Vhx.tv, Official.FM, Nfb.ca
  [raphigaziano]

1.0a (2012-01-02)
-----------------

- Initial release