@@ -9,13 +9,13 @@
 <div metal:fill-slot="content-core">
 
   <metal:block define-macro="content-core">
-  <p i18n:domain="plone">
+    <p i18n:domain="plone">
       <span i18n:translate="link_address">The link address is:</span>
       <a href="#" tal:attributes="href context/remote_url"
                   tal:content="context/remote_url"
                   class="oembed">remote url</a>
-  </p>
-  <tal:oembed tal:replace="structure view/get_embed_auto"></tal:oembed>
+    </p>
+    <div class="oembed" tal:content="structure view/get_embed_auto"></div>
   </metal:block>
 
 </div>
