@@ -1,0 +1,30 @@
+"Service","oembed","api->embed","url->embed"
+"VIDEO",,,
+"* 5min (http://www.5min.com/)","x",,
+"* Youtube (http://www.youtube.com/)","x",,
+"* Qik (http://qik.com/)","x",,
+"* Revision3 (http://revision3.com/)","x",,
+"* Hulu (http://www.hulu.com/)","x",,
+"* Vimeo (http://vimeo.com/)","x",,
+"* CollegeHumor (http://www.collegehumor.com/)","x",,
+"* Kinomap (http://wwww.kinomap.com/)","x",,
+"* Clikthrough (http://clikthrough.com)","x",,
+"* Dotsub (http://dotsub.com/)","x",,
+"* Vhx.tv (http://vhx.tv)","x",,
+"* Nfb.ca (http://http://www.nfb.ca/)","x",,
+,,,
+"Photo providers:",,,
+,,,
+"* 23hq (http://www.23hq.com/)","x",,
+"* Flickr (http://www.flickr.com/)","x",,
+"* SmugMug (http://www.smugmug.com/)","x",,
+"* Photobucket (http://photobucket.com)","x",,
+"* Instagr (http://instagr.am/p/BUG/)","x",,
+,,,
+"Rich providers:",,,
+,,,
+"* iFixit (http://www.iFixit.com)","x",,
+"* Poll Everywhere (http://www.polleverywhere.com/)","x",,
+"* SlideShare (http://www.slideshare.net/)","x",,
+"* WordPress (http://wordpress.com/)","x",,
+"* Official.FM (http://official.fm)","x",,
